--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }
+ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
 tokio = { version = "1", features = ["full"] }
 dotenvy = "0.15"
 anyhow = "1.0"
 futures-util = "0.3"
+alloy = "0.15.8"
